--- a/Application/ui/mainwindow.ui
+++ b/Application/ui/mainwindow.ui
@@ -15,7 +15,13 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../Res.qrc">
-    <normaloff>:/icons/Icons/three-bars.ico</normaloff>:/icons/Icons/three-bars.ico</iconset>
+    <normaloff>:/icons/Icons/app.ico</normaloff>:/icons/Icons/app.ico</iconset>
+  </property>
+  <property name="iconSize">
+   <size>
+    <width>24</width>
+    <height>24</height>
+   </size>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="autoFillBackground">
@@ -334,9 +340,19 @@
     <addaction name="separator"/>
     <addaction name="act_AboutQT"/>
    </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>&amp;Отчеты</string>
+    </property>
+    <addaction name="act_Card"/>
+    <addaction name="act_LiterList"/>
+    <addaction name="separator"/>
+    <addaction name="act_RepDesigner"/>
+   </widget>
    <addaction name="menu_File"/>
-   <addaction name="menuRequests"/>
    <addaction name="menu_View"/>
+   <addaction name="menuRequests"/>
+   <addaction name="menu"/>
    <addaction name="menu_6"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -948,6 +964,42 @@
    </property>
    <property name="toolTip">
     <string>Панель фильтров</string>
+   </property>
+  </action>
+  <action name="act_RepDesigner">
+   <property name="icon">
+    <iconset resource="../Res.qrc">
+     <normaloff>:/icons/Icons/rep_designer.ico</normaloff>:/icons/Icons/rep_designer.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Дизайнер отчетов</string>
+   </property>
+   <property name="toolTip">
+    <string>Открыть дизайнер отчетов</string>
+   </property>
+  </action>
+  <action name="act_Card">
+   <property name="icon">
+    <iconset resource="../Res.qrc">
+     <normaloff>:/icons/Icons/rep_common.ico</normaloff>:/icons/Icons/rep_common.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Карточка</string>
+   </property>
+   <property name="toolTip">
+    <string>Сформировать карточку заявки</string>
+   </property>
+  </action>
+  <action name="act_LiterList">
+   <property name="icon">
+    <iconset resource="../Res.qrc">
+     <normaloff>:/icons/Icons/rep_common.ico</normaloff>:/icons/Icons/rep_common.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Литерное дело</string>
+   </property>
+   <property name="toolTip">
+    <string>Сформировать титульный лист литерного дела</string>
    </property>
   </action>
  </widget>
